syntax = "proto3";
package product.event;

option go_package = "github.com/go-saas/kit/product/event/v1;v1";

message ProductUpdatedEvent{
  string product_id=1;
  string product_version=2;
  string tenant_id=3;
  bool is_delete=4;
}
