syntax = "proto3";
package sys.internal;

option go_package = "github.com/go-saas/kit/sys/private/conf;conf";

import "conf/conf.proto";
import "blob/blob.proto";
import "google/protobuf/struct.proto";


message Bootstrap {
  conf.Data data = 2;
  conf.Security security=3;
  conf.Services services =4;
  conf.Logging logging=6;
  conf.Tracers tracing=7;
  conf.AppConfig app=8;

  SysConf sys=10;
}

message SysConf{
  message Apisix{
    string endpoint=1;
    string api_key=2;

    map<string,google.protobuf.Struct> routes=10;

    map<string,google.protobuf.Struct> global_rules=11;

    map<string,google.protobuf.Struct> upstreams=12;

    map<string,google.protobuf.Struct> stream_routes=13;

  }
  Apisix apisix=1;
}